--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -6,19 +6,10 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_setting"
-            android:title="Tools" />
-    </group>
+            android:title="Setting" />
 
-    <!--<item android:title="Communicate">-->
-        <!--<menu>-->
-            <!--<item-->
-                <!--android:id="@+id/nav_share"-->
-                <!--android:icon="@drawable/ic_menu_share"-->
-                <!--android:title="Share" />-->
-            <!--<item-->
-                <!--android:id="@+id/nav_send"-->
-                <!--android:icon="@drawable/ic_menu_send"-->
-                <!--android:title="Send" />-->
-        <!--</menu>-->
-    <!--</item>-->
+       <item
+           android:id="@+id/nav_signOut"
+           android:title="Sign Out" />
+   </group>
 </menu>
