--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -37,7 +37,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
-        android:layout_width="395dp"
+        android:layout_width="340dp"
         android:layout_height="87dp"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -56,19 +56,19 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="395dp"
+        android:id="@+id/linearLayout2"
+        android:layout_width="340dp"
         android:layout_height="86dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="0.77"
         android:orientation="horizontal"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        android:id="@+id/linearLayout2">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <Switch
             android:id="@+id/alram2"
-            android:layout_width="406dp"
+            android:layout_width="340dp"
             android:layout_height="96dp"
             android:layout_weight="1"
             android:text="댓글 알림"
@@ -77,7 +77,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="395dp"
+        android:layout_width="340dp"
         android:layout_height="86dp"
         android:layout_weight="0.77"
         android:orientation="horizontal"
