로그인과 로그아웃이 됩니다 되요 된다구요 우리가 해냈어요 이건 우리가 해낸거에요 모두에게 감사합니다

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -24,7 +24,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.963" />
+        app:layout_constraintVertical_bias="0.963" >
+
+    </com.google.android.gms.common.SignInButton>
 
     <ImageView
         android:id="@+id/imageView"
@@ -43,5 +45,6 @@
         tools:layout_editor_absoluteY="99dp"
         tools:layout_editor_absoluteX="33dp"
         android:background="@drawable/logoimg"/>
+
 
 </android.support.constraint.ConstraintLayout>
