--- a/app/src/main/res/layout/fragment_tab2_find_opponent.xml
+++ b/app/src/main/res/layout/fragment_tab2_find_opponent.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.project.ballgamematching.Tab2FindOpponentFragment">
 
     <RadioGroup
         android:layout_width="wrap_content"
@@ -55,38 +57,40 @@
     </RadioGroup>
 
     <View
-        android:layout_marginTop="15px"
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:layout_centerInParent="true"
-        android:background="#FF0000"
-        ></View>
+        android:layout_marginTop="15px"
+        android:background="#FF0000"></View>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-    <Button
-        android:id="@+id/searchdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="날짜선택"/>
-    <Spinner
-        android:id="@+id/timespinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></Spinner>
+        android:layout_gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/searchdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="날짜선택" />
+
+        <Spinner
+            android:id="@+id/timespinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></Spinner>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center">
+
         <TextView
             android:id="@+id/txtdate"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-             />
+            android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/txttime"
             android:layout_width="wrap_content"
@@ -94,31 +98,106 @@
             android:text="[시간선택1]" />
 
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:layout_marginTop="15px"
         android:layout_centerInParent="true"
-        android:background="#FF0000"
-        ></View>
+        android:layout_marginTop="15px"
+        android:background="#FF0000"></View>
 
     <Button
         android:id="@+id/searchmat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15px"
-        android:text="찾기"/>
+        android:text="찾기" />
+
     <Button
         android:id="@+id/searchmemo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="글쓰기"/>
+        android:text="글쓰기" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:layout_marginTop="15px"
         android:layout_centerInParent="true"
-        android:background="#FF0000"
-        ></View>
+        android:layout_marginTop="15px"
+        android:background="#FF0000"></View>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/searchimagev"
+                android:layout_width="80dip"
+                android:layout_height="80dip"
+                android:layout_margin="10dip"
+                android:src="@drawable/hired" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dip"
+
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/seda"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dip"
+                    android:layout_marginLeft="5dip"
+                    android:layout_marginRight="8dip"
+                    android:layout_marginTop="5dip"
+                    android:text="sub"
+                    android:textSize="16dip" />
+
+                <TextView
+                    android:id="@+id/sewa"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dip"
+                    android:layout_marginLeft="5dip"
+                    android:layout_marginRight="8dip"
+                    android:layout_marginTop="5dip"
+                    android:text="sub"
+                    android:textSize="16dip" />
+
+                <TextView
+                    android:id="@+id/seid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dip"
+                    android:layout_marginLeft="5dip"
+                    android:layout_marginRight="8dip"
+                    android:layout_marginTop="5dip"
+                    android:text="sub"
+                    android:textSize="16dip" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+               >
+
+                <TextView
+                    android:id="@+id/setehi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="title"
+                    android:textSize="24dip" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
