--- a/app/src/main/res/layout/fragment_tab2_find_opponent.xml
+++ b/app/src/main/res/layout/fragment_tab2_find_opponent.xml
@@ -7,6 +7,7 @@
     tools:context="com.project.ballgamematching.Tab2FindOpponentFragment">
 
     <RadioGroup
+        android:id="@+id/searchsports"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
